# PF-MCDR-WebUI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: package-src.yml
docs/: WebApi.md  WebUI事件系统.md  多服面板合并.md  指令树.md
examples/: rtext_test_example.py
examples/webui_plugin_page_example/: README.md  mcdreforged.plugin.json  webui_plugin_page_example.py
examples/webui_plugin_page_example/static/: demo.html
src/: mcdreforged.plugin.json
src/guguwebui/: __init__.py  constant.py  state.py  web_server.py
src/guguwebui/PIM/: __init__.py  mcdreforged.plugin.json
src/guguwebui/api/: chat.py  config.py  plugins.py  server.py
src/guguwebui/dependencies/: auth.py
src/guguwebui/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/guguwebui/integrations/: __init__.py  gugubot_system.py
src/guguwebui/js/: main.js  online-plugins.js  plugins.js
src/guguwebui/panel_merge/: __init__.py  proxy.py  routes.py  state.py
src/guguwebui/routers/: __init__.py  audit_router.py  chat_router.py  config_router.py  pim_router.py  pip_router.py  plugin_management_router.py  plugin_proxy_router.py  server_router.py
src/guguwebui/services/: ai_service.py  auth_service.py  chat_service.py  config_service.py  file_service.py  operation_audit_service.py  pip_service.py  plugin_service.py  qq_qr_login_service.py  server_service.py
src/guguwebui/structures/: __init__.py
src/guguwebui/templates/: login.html
src/guguwebui/utils/: api_cache.py  audit_actor.py  auth_util.py  chat_logger.py  config_validator.py  (+13 more)
tool/: pip_installer.py
(+52 files in other folders)
